# pcode-editor

./: .gitignore  BUILD_SYSTEM.md  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TESTS.md  VERSION  imgui.ini  pcode-settings.json  pcode-settings.json-orig  vcpkg.json
.githooks/: pre-commit
.github/workflows/: build.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_NOTIFICATIONS.md  FEATURE_ASSESSMENT.md  NOTIFICATION_SYSTEM.md  PROJECT_RETROSPECTIVE.md  README.md  SESSION.md  VIM_MOTIONS_SPEC.md  developer.md  faq.md  imgui_tutorial.md  layout-analysis.md  userguide.md  versioning.md
package/: README.txt  VERSION  imgui.ini  install.ps1  pcode-settings.json
scripts/: build-freebsd.sh  build-linux.sh  build-macos.sh  build-windows-mingw.ps1  build-windows.bat  build.sh  sync-version.ps1  sync-version.sh
src/: editor_app.cpp  editor_app.h  editor_notifications.h  imgui_notify.h  main.cpp
tests/: test_menu.cpp  test_regression.cpp  test_view_features.cpp  test_vim_motions.cpp
